<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvOrderPlaced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_placed_successfully"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvThankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_message"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnGoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home"
        android:textAllCaps="false" />

</LinearLayout>
